media queries, base correct

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div class="header-box">
       <p id="passion">Passionate</p>
-      <h5>
+      <h5 id="developer">
         <strong>Full Stack Developer</strong>
       </h5>
       <p id="training">(in training)</p>
