linked js racer ver 1 to main site

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         </div>
 
         <div class="six columns space-between-blog-posts">
-          <img class="blog-image black-border" src="images/submarine_captain_1.png">
+          <a href="public/js_racer_ver1.html"><img class="blog-image black-border" src="images/submarine_captain_1.png"></a>
         </div>
       </div><!-- end of row -->
 
@@ -236,13 +236,21 @@
 
       <div class="row">
         <div class="six columns">
-          <img class="blog-image black-border" src="images/homepage_1.png">
+          <a href="public/experimental-homepage-1.html"><img class="blog-image black-border" src="images/homepage_1.png"></a>
         </div>
 
         <div class="six columns">
-          <img class="blog-image black-border" src="images/homepage_2.png">
+          <a href="public/experimental-homepage-2.html"><img class="blog-image black-border" src="images/homepage_2.png"></a>
         </div>
       </div><!-- end of row -->
+
+      <div class="row">
+        <div class="six columns">
+          <a href="public/experimental-homepage-3.html"><img class="blog-image black-border" src="images/homepage_3.png"></a>
+        </div>
+      </div><!-- end of row -->
+
+
       <div class="row space-between-blog-posts"><!-- spacer row -->
       </div><!-- end of spacer row -->
 
