t7 testing blog entry

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
   <section><!-- landing page -->
-    <div id="nav-box">
+    <div class="nav-box">
 
       <nav class="primary">
         <ul>
@@ -109,6 +109,25 @@
             <h2 class="section-heading"><a id="blog">Latest Blog Posts</a></h2>
           </div>
         </div><!-- end of row -->
+
+        <div class="row">
+          <div class="four columns">
+            <a href="blog/t7-testing.html"><img class="blog-image" src="public/images/auckland-day.jpg" alt="Auckland by day"></a>
+          </div>
+
+          <div class="seven columns">
+            <h5 class="blog-heading-text"><a href="blog/t7-testing.html">Testing</a></h5>
+            <p class="dateline"><em>9th May 2016</em></p>
+            <p class="blog-heading-text">
+              Dealing with scope in Javascript is the focus of this week's technical blog entry. While the concept of global vs. local scope if fine, getting the hang of closure is a work in progress...<a href="blog/t7-testing.html">(click to read more)</a>
+            </p>
+          </div><!-- end of seven columns -->
+
+          <div class="one column">
+          </div><!-- end of one column -->
+        </div><!-- end of row -->
+        <div class="row space-between-blog-posts"><!-- spacer row -->
+        </div><!-- end of spacer row -->
 
 
         <div class="row">
