--- a/index.html
+++ b/index.html
@@ -112,6 +112,26 @@
 
         <div class="row">
           <div class="four columns">
+            <a href="blog/c8-connecting.html"><img class="blog-image" src="public/images/kitesurf-aqua.jpg" alt="Kitesurfer on aqua water"></a>
+          </div>
+
+          <div class="seven columns">
+            <h5 class="blog-heading-text"><a href="blog/c8-connecting.html">Connecting</a></h5>
+            <p class="dateline"><em>9th May 2016</em></p>
+            <p class="blog-heading-text">
+              Empathy with those around you is an important skill to develop. Not only does it make us nicer to each other (so we don't make anyone cry), it makes us more effective in all sorts of ways...<a href="blog/c8-connecting.html">(click to read more)</a>
+            </p>
+          </div><!-- end of seven columns -->
+
+          <div class="one column">
+          </div><!-- end of one column -->
+        </div><!-- end of row -->
+        <div class="row space-between-blog-posts"><!-- spacer row -->
+        </div><!-- end of spacer row -->
+
+
+        <div class="row">
+          <div class="four columns">
             <a href="blog/t7-testing.html"><img class="blog-image" src="public/images/auckland-day.jpg" alt="Auckland by day"></a>
           </div>
 
