can't get the new page to behave properly

--- a/index.html
+++ b/index.html
@@ -31,33 +31,29 @@
 
 <body>
   <section><!-- landing page -->
-    <div class="nav-box">
 
-      <nav class="primary">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#about">About Me</a></li>
-          <li><a href="#blog">Blog</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contactme">Contact</a></li>
-        </ul>
-      </nav>
-    </div>
+      <div class="nav-box">
+
+        <nav class="primary">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#blog">Blog</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contactme">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
 
     <div class="uber" id="landing-page">
 
-      <div id="top-box">
-          <div id="top-text-container">
+      <div id="box">
+          <div id="text-container">
             <p id="name">Hi, I'm Josh</p>
             <p id="developer">Full Stack Developer</p>
             <p id="training">(in training)</p>
           </div>
-      </div><!--top-box-->
-
-      <div id="bottom-box">
-        <div id="bottom-text-container">
-        </div><!-- bottom-text-container-->
-      </div><!-- bottom-box-->
+      </div><!--box-->
 
     </div><!-- end of uber -->
 
