probably don't want to keep

--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@
 <body>
   <section><!-- landing page -->
 
-      <div class="nav-box">
+    <!-- <div class="nav-box"> -->
 
-        <nav class="primary">
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#blog">Blog</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contactme">Contact</a></li>
-          </ul>
-        </nav>
-      </div>
+      <nav class="primary">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#about">About Me</a></li>
+          <li><a href="#blog">Blog</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contactme">Contact</a></li>
+        </ul>
+      </nav>
+<!--     </div> -->
 
-    <div class="uber" id="landing-page">
+    <div class="uber"   id="landing-page">
 
       <div id="box">
           <div id="text-container">
