--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <p id="name">Hi, I'm Josh</p>
             <p id="developer">Full Stack Developer</p>
             <p id="training">(in training)</p>
+            <button type="">My work</button><button type="">Contact Me</button>
           </div>
       </div><!--top-box-->
 
