added in skills section

--- a/index.html
+++ b/index.html
@@ -62,6 +62,33 @@
 
   </section><!-- end of landing page -->
 
+  <section><!-- my skills section -->
+    <div class="uber">
+
+      <div class="container">
+        <div class="row space-between-sections">
+        </div><!-- end of spacer row between sections -->
+
+        <div class="row">
+          <div class="twelve columns">
+            <h2 class="section-heading border"><a id="about">What I Bring to the Table</a></h2>
+          </div>
+        </div><!-- end of row -->
+        <div class="row border">
+          <div class="four columns center">
+            <h3>Design</h3>
+          </div><!-- end of four colums -->
+          <div class="four columns center">
+            <h3>Planning</h3>
+          </div><!-- end of four colums -->
+          <div class="four columns center">
+            <h3>Implementation</h3>
+          </div><!-- end of four colums -->
+        </div><!-- end of row -->
+      </div><!-- end of container -->
+    </div><!-- end of uber -->
+  </section><!-- end of skills section -->
+
   <section><!-- about me section heading -->
     <div class="uber">
 
