rich found the problem

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
   <section><!-- landing page -->
 
-    <!-- <div class="nav-box"> -->
+    <div class="nav-box">
 
       <nav class="primary">
         <ul>
@@ -43,22 +43,19 @@
           <li><a href="#contactme">Contact</a></li>
         </ul>
       </nav>
-<!--     </div> -->
+    </div>
 
-    <div class="uber"   id="landing-page">
+    <div  class="uber" id="landing-page">
 
-      <div id="box">
-          <div id="text-container">
-            <p id="name">Hi, I'm Josh</p>
-            <p id="developer">Full Stack Developer</p>
-            <p id="training">(in training)</p>
-            <button type="">My work</button><button type="">Contact Me</button>
-          </div>
-      </div><!--box-->
+      <div id="text-container">
+        <p id="name">Hi, I'm Josh</p>
+        <p id="developer">Full Stack Developer</p>
+        <p id="training">(in training)</p>
+        <button type="">My work</button><button type="">Contact Me</button>
+      </div>
 
 
     </div><!-- end of uber -->
-
 
   </section><!-- end of landing page -->
 
