added instructions to fire torpedoes

--- a/public/js_racer_ver2.html
+++ b/public/js_racer_ver2.html
@@ -16,7 +16,7 @@
 
     <h1 class="center">Submarine Captain</h1>
 
-    <h3 class="center">Use the arrow keys to move</h3>
+    <h3 class="center">Use the arrow keys to move and spacebar to fire torpedoes</h3>
 
 
     <div id="button-div">
