--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- FONT -->
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
-  <link href='https://fonts.googleapis.com/css?family=Courgette' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Courgette" rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Yesteryear' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Yellowtail' rel='stylesheet' type='text/css'>
 
@@ -74,13 +74,21 @@
         <div class="row">
           <div class="four columns center">
             <h3 class="para">Design</h3>
-            <p class="prose">All of this text should be in paragraph colour, with a font-weight of 300.</p>
+            <p class="prose">
+              Ki ta Maui e kii ai, “Kaore au e whakahoha i a koutou, ka noho hei karetao noa iho, koinei taku whakapono ki a koutou.” Ko te whakautu o te tuakana, “Na to hiroki ka pohehe matou he kai noa iho ma nga ika”. Ka riri haere a Maui. “Maku e whai kaha, whai mana hei whakamana i ahau ano”, noku te mana hei whakaarahi i oku tuakana. Ka whakaritea e Maui he tatai hei whakamanahia i ona ake pukenga mo tenei mea te hii-ika. I tetahi po i a Maui e noho tau ana, ka timatahia e Maui ki te rarangahia he rakau hii-ika. I a ia e rarangahia e waiatatia e Maui tetahi karakia tawhito hei whakakaha i te rakau hii-ika. I te mutunga o tona mahi, i tangohia he kauae raro na tona tupuna i a Murirangawhenua i hoatu ki a ia.
+            </p>
           </div><!-- end of four colums -->
           <div class="four columns center">
             <h3 class="para">Planning</h3>
+            <p class="prose">
+              Kei te taka riri nga tuakana ki a Maui, heoi ano ka karanga atu a Maui, “konei ahau i runga ano i te karanga o Murirangawhenua, nana i kii mai, he toa mo te hii-ika e hika, na reira, i ahau e karakia ano, whakararo ou rakau hii-ika, kaore e kore ka rapuhia e koe te tini, te mano o nga ika.” I karawhiua nga tuakana a ratou rakau hii-ika ki a Tangaroa, a, ka rapuhia e ratou nga ika, ka rawe. A, ka poto haere te wa, ka whakakiia te waka e nga ika, a, ka harikoa katoa nga tuakana. Ka kii mai ratou, “kaore he hunga hii-ika tua atu i a tatou”, a, ka timatahia e Maui ki te hii-ika, ka kata mai nga tuakana ki a ia, “ka rapu noa iho koe ki tetahi rimu noa iho, ki tetahi porotawhao ranei!”
+            </p>
           </div><!-- end of four colums -->
           <div class="four columns center">
             <h3 class="para">Implementation</h3>
+            <p class="prose">
+              Ka tohea ki uta te waka e nga tuakana, engari ahua rereke te ahua o te waka. Ka kii mai, “Kei te ahua taumaha te waka nei, kei te hoe tahi tatou, kao ranei?” Ka kii atu tetahi, “na to kaha kai i nga kumara te take” Ka kii atu tetahi ano, “Katia to korua mahi whakatoi”. I to ratou taenga atu ki te wahi taunga ika, ka puta mai a Maui, aue ko te ohorere o ona tuakana! “He aha.” “He aha tau?” “To mahi hianga e Maui.” “Ko koe te take e kore ai matou e whiwhi ika ana, ko koe ke.” Ka kata nga tuakana! Engari kaore a Maui i whakarata i a ratou mahi whakatoi ki a ia, a, ka karakia a Maui. Ka kii atu ia ki ona tuakana, “purua a koutou toto koa ki taku rakau hii-ika?” Ka kata haere nga tuakana i te tono nei i a Maui, a, ka riri haere a Maui, ka patua ia ki tona ihu, ka rere iho ai te toto.
+            </p>
           </div><!-- end of four colums -->
         </div><!-- end of row -->
       </div><!-- end of container -->
