C9 blog and formatted buttons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- FONT -->
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
-  <link href="https://fonts.googleapis.com/css?family=Courgette" rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Yesteryear' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Yellowtail' rel='stylesheet' type='text/css'>
 
@@ -51,7 +51,7 @@
         <p id="name">Hi, I'm Josh</p>
         <p id="developer">Full Stack Developer</p>
         <p id="training">(in training)</p>
-        <button type="">My work</button><button type="">Contact Me</button>
+        <a class="button alt-button" href="#">My work</a><a class="button alt-button" href="#">Contact me</a>
       </div>
 
 
