updated blog homepage

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <p id="name">Hi, I'm Josh</p>
         <p id="developer">Full Stack Developer</p>
         <p id="training">(in training)</p>
-        <a class="button alt-button" href="#">My work</a><a class="button alt-button" href="#">Contact me</a>
+        <a class="button alt-button-1" href="#">My work</a><a class="button alt-button-2" href="#">Contact me</a>
       </div>
 
 
@@ -141,7 +141,21 @@
           </div>
         </div><!-- end of row -->
 
-        <div class="row">
+        <div class="row space-between-blog-posts">
+          <div class="four columns">
+            <a href="blog/c9-leadership.html"><img class="blog-image" src="public/images/blog/rocks.jpg" alt="Kitesurfer on aqua water"></a>
+          </div>
+
+          <div class="seven columns">
+            <h5 class="blog-heading-text para"><a href="blog/c9-leadership.html">Leadership</a></h5>
+            <p class="no-margin para"><em>12th May 2016</em></p>
+            <p class="blog-heading-text prose">
+              I got a lot out of this week's reading of Search Inside Yourself. The SCARF model works well to explain some aspects of human behavior which can on occasion appear irriational...<a href="blog/c9-leadership.html">(click to read more)</a>
+            </p>
+          </div><!-- end of seven columns -->
+        </div><!-- end of row -->
+
+        <div class="row space-between-blog-posts">
           <div class="four columns">
             <a href="blog/c8-connecting.html"><img class="blog-image" src="public/images/kitesurf-aqua.jpg" alt="Kitesurfer on aqua water"></a>
           </div>
@@ -153,15 +167,9 @@
               Empathy with those around you is an important skill to develop. Not only does it make us nicer to each other (so we don't make anyone cry), it makes us more effective in all sorts of ways...<a href="blog/c8-connecting.html">(click to read more)</a>
             </p>
           </div><!-- end of seven columns -->
-
-          <div class="one column">
-          </div><!-- end of one column -->
         </div><!-- end of row -->
-        <div class="row space-between-blog-posts"><!-- spacer row -->
-        </div><!-- end of spacer row -->
 
-
-        <div class="row">
+        <div class="row space-between-blog-posts">
           <div class="four columns">
             <a href="blog/t7-testing.html"><img class="blog-image" src="public/images/auckland-day.jpg" alt="Auckland by day"></a>
           </div>
@@ -173,13 +181,7 @@
               Dealing with scope in Javascript is the focus of this week's technical blog entry. While the concept of global vs. local scope if fine, getting the hang of closure is a work in progress...<a href="blog/t7-testing.html">(click to read more)</a>
             </p>
           </div><!-- end of seven columns -->
-
-          <div class="one column">
-          </div><!-- end of one column -->
         </div><!-- end of row -->
-        <div class="row space-between-blog-posts"><!-- spacer row -->
-        </div><!-- end of spacer row -->
-
 
         <div class="row">
           <div class="four columns">
