finalised colours in skills section

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@ Murirangawhenua i hoatu ki a ia.</p>
 <!-- end of four colums -->
 <div class="four columns center">
 <h3 class="para">Planning</h3>
-<p class="prose">Kei te taka riri nga tuakana ki a Maui, heoi ano
-ka karanga atu a Maui, “konei ahau i runga ano i te karanga o
+<p class="ex-prose">Kei te taka riri nga tuakana ki a Maui, heoi
+ano ka karanga atu a Maui, “konei ahau i runga ano i te karanga o
 Murirangawhenua, nana i kii mai, he toa mo te hii-ika e hika, na
 reira, i ahau e karakia ano, whakararo ou rakau hii-ika, kaore e
 kore ka rapuhia e koe te tini, te mano o nga ika.” I karawhiua nga
@@ -92,10 +92,10 @@ tetahi rimu noa iho, ki tetahi porotawhao ranei!”</p>
 <!-- end of four colums -->
 <div class="four columns center">
 <h3 class="para">Implementation</h3>
-<p class="prose">Ka tohea ki uta te waka e nga tuakana, engari ahua
-rereke te ahua o te waka. Ka kii mai, “Kei te ahua taumaha te waka
-nei, kei te hoe tahi tatou, kao ranei?” Ka kii atu tetahi, “na to
-kaha kai i nga kumara te take” Ka kii atu tetahi ano, “Katia to
+<p class="ex-prose">Ka tohea ki uta te waka e nga tuakana, engari
+ahua rereke te ahua o te waka. Ka kii mai, “Kei te ahua taumaha te
+waka nei, kei te hoe tahi tatou, kao ranei?” Ka kii atu tetahi, “na
+to kaha kai i nga kumara te take” Ka kii atu tetahi ano, “Katia to
 korua mahi whakatoi”. I to ratou taenga atu ki te wahi taunga ika,
 ka puta mai a Maui, aue ko te ohorere o ona tuakana! “He aha.” “He
 aha tau?” “To mahi hianga e Maui.” “Ko koe te take e kore ai matou
@@ -315,10 +315,12 @@ to read more)</p>
 <div class="row">
 <div class="six columns"><a href=
 "public/js_racer_ver2.html"><img class="blog-image black-border"
-src="public/images/js_racer_ver2/sub_captain_ver2.png"></a></div>
+src="public/images/js_racer_ver2/sub_captain_ver2.png" alt=
+"image of submarine"></a></div>
 <div class="six columns space-between-blog-posts"><a href=
 "public/js_racer_ver1.html"><img class="blog-image black-border"
-src="images/submarine_captain_1.png"></a></div>
+src="images/submarine_captain_1.png" alt=
+"image of homepage 1"></a></div>
 </div>
 <!-- end of row -->
 <div class="row">
@@ -330,20 +332,24 @@ src="images/submarine_captain_1.png"></a></div>
 <div class="row">
 <div class="six columns"><a href=
 "public/experimental-homepage-1.html"><img class=
-"blog-image black-border" src="images/homepage_1.png"></a></div>
+"blog-image black-border" src="images/homepage_1.png" alt=
+"image of homepage 1"></a></div>
 <div class="six columns"><a href=
 "public/experimental-homepage-2.html"><img class=
-"blog-image black-border" src="images/homepage_2.png"></a></div>
+"blog-image black-border" src="images/homepage_2.png" alt=
+"image of homepage 2"></a></div>
 </div>
 <!-- end of row -->
 <div class="row">
 <div class="six columns"><a href=
 "public/experimental-homepage-3.html"><img class=
-"blog-image black-border" src="images/homepage_3.png"></a></div>
+"blog-image black-border" src="images/homepage_3.png" alt=
+"image of homepage 3"></a></div>
 <div class="six columns"><a href=
 "public/experimental-homepage-4.html"><img class=
 "blog-image black-border" src=
-"public/images/experimental_homepage_4.png"></a></div>
+"public/images/experimental_homepage_4.png" alt=
+"image of homepage 4"></a></div>
 </div>
 <!-- end of row -->
 <div class="row space-between-blog-posts"><!-- spacer row --></div>
